--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Avioane</title>
 
-    <script type="text/javascript" src="avioane.js"></script>
+    <script type="text/javascript" src="index.js"></script>
 
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.cdnfonts.com/css/inter?styles=29139,29142,29132,29135,29137,29140,29128,29130,29126" rel="stylesheet">
