--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
       <div class="scores">
         <h1><span id="playerScore">0</span></h1>
-        <image src="assets/logo.svg" class="logo" />
+        <image src="src/assets/logo.svg" class="logo" />
         <h1><span id="computerScore">0</span></h1>
       </div>
       <div class="computerSideScore">
